--- a/CHAT_GPT_Produtividade/index.html
+++ b/CHAT_GPT_Produtividade/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="cabecalho">
-        <div class="cabecalho__logo">            
+        <div class="cabecalho__logo">
             <img id="logo-vidflow" src="./img/modo_claro/vidflow-logo-light-mode.png" alt="Página inicial do VidFlow">
         </div>
 
@@ -260,9 +260,10 @@
             <span class="newsletter__inscreva-se">Inscreva-se para saber as novidades!</span>
 
             <div class="newsletter__input-e-botao-container">
-                <input class="newsletter__input" type="email" placeholder="Insira seu endereço de email">
+                <input class="newsletter__input" type="email" placeholder="Insira seu endereço de email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,8}$" title="Por favor, insira um endereço de email válido.">
                 <button class="newsletter__botao-inscrever">Inscrever</button>
             </div>
+
         </form>
 
         <ul class="videos-container">
